<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
<group>
    <item android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        android:id="@+id/drawer_profile"
        />

    <item android:title="@string/preferences"
        android:id="@+id/drawer_preferences"
        android:icon="@drawable/ic_preferences"/>
    <item android:title="@string/my_students"
        android:id="@+id/drawer_my_student"
        android:icon="@drawable/ic_my_student"/>
    <item android:title="@string/register_volunteer"
        android:id="@+id/drawer_register_volunteer"
        android:icon="@drawable/ic_volunteer"/>
    <item android:title="@string/register_student"
        android:id="@+id/drawer_register_student"
        android:icon="@drawable/ic_register_student"/>
    <item android:title="@string/student_attendance"
        android:id="@+id/drawer_student_attendance"
        android:icon="@drawable/ic_attendance"/>
    <item android:title="@string/logout"
        android:id="@+id/drawer_logout"
        android:icon="@drawable/ic_logout"/>
</group>
</menu>